--- a/tutorials/a_getting_started/index.html
+++ b/tutorials/a_getting_started/index.html
@@ -275,8 +275,8 @@ For now, we will use a built-in shape: an hexagon with a base length of 10 Angst
 </span></code></pre></div>
 <div class="language-text highlight"><pre><span></span><code>(3, 60, 60)
 </code></pre></div>
-<p>We want to compute its expectation value, so we have to wrap it in a list and pass it to the TD simulation, called <code>td_run</code></p>
-<div class="language-python highlight"><pre><span></span><code><span id="__span-12-1"><a id="__codelineno-12-1" name="__codelineno-12-1" href="#__codelineno-12-1"></a><span class="n">result</span> <span class="o">=</span> <span class="n">my_first_flake</span><span class="o">.</span><span class="n">td_run</span><span class="p">(</span>
+<p>We want to compute its expectation value, so we have to wrap it in a list and pass it to the TD simulation, called <code>master_equation</code></p>
+<div class="language-python highlight"><pre><span></span><code><span id="__span-12-1"><a id="__codelineno-12-1" name="__codelineno-12-1" href="#__codelineno-12-1"></a><span class="n">result</span> <span class="o">=</span> <span class="n">my_first_flake</span><span class="o">.</span><span class="n">master_equation</span><span class="p">(</span>
 </span><span id="__span-12-2"><a id="__codelineno-12-2" name="__codelineno-12-2" href="#__codelineno-12-2"></a>    <span class="n">end_time</span><span class="o">=</span><span class="mi">40</span><span class="p">,</span> <span class="c1"># the start is set to 0 by default </span>
 </span><span id="__span-12-3"><a id="__codelineno-12-3" name="__codelineno-12-3" href="#__codelineno-12-3"></a>    <span class="n">relaxation_rate</span><span class="o">=</span><span class="mi">1</span> <span class="o">/</span> <span class="mi">10</span><span class="p">,</span>
 </span><span id="__span-12-4"><a id="__codelineno-12-4" name="__codelineno-12-4" href="#__codelineno-12-4"></a>    <span class="n">illumination</span><span class="o">=</span><span class="n">my_first_illumination</span><span class="p">,</span>
