--- a/tutorials/l_master/index.html
+++ b/tutorials/l_master/index.html
@@ -127,6 +127,7 @@
               
                 <h1 id="custom-time-evolution">Custom Time Evolution</h1>
 <p>GRANAD lets you customize the Master Equation you simulate and extract any information from it.</p>
+<p><em>Note</em>: Please consult the tutorial on potentials first.</p>
 <p><em>Note</em>: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency.</p>
 <p><em>Note</em>: This is still rough. In the future, I might package the functions into a "Term" object or sth like that, but this will be purely cosmetic. The underlying functions won't change.</p>
 <h2 id="hamiltonian">Hamiltonian</h2>
@@ -140,7 +141,7 @@
 </span></code></pre></div>
 <div class="language-text highlight"><pre><span></span><code>dict_keys([&#39;bare_hamiltonian&#39;, &#39;coulomb&#39;, &#39;potential&#39;])
 </code></pre></div>
-<p>Again, the default Hamiltonian just has three terms:</p>
+<p>As discussed, the default Hamiltonian just has three terms:</p>
 <ol>
 <li>a bare hamiltonian.</li>
 <li>an induced coulomb interaction.</li>
@@ -152,7 +153,7 @@
 <li>the density matrix at this time</li>
 <li>an argument object <code>args</code>. It contains all required "static" information, like relaxation rates, energies or operators (remember we use the Schrödinger picture, so, e.g. the dipole operator does not depend on time).</li>
 </ol>
-<p>Every function maps these arguments to a complex matrix. Before a simulation, the functions in the dictionary get turned into a list <code>func_list</code>. </p>
+<p>Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list <code>func_list</code>. </p>
 <p>The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so <code>H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )</code>.</p>
 <h2 id="argument-objects">Argument Objects</h2>
 <p>What does the <code>args</code> object contain, exactly? We can create this object ourselves. It is just a named tuple (like a C struct) and we can inspect its contents by looking at its fields </p>
@@ -209,9 +210,8 @@ looks like <code>term: time, density_matrix, args -&gt; matrix</code>.</p>
 </span><span id="__span-6-6"><a id="__codelineno-6-6" name="__codelineno-6-6" href="#__codelineno-6-6"></a>    <span class="n">field</span> <span class="o">=</span> <span class="p">(</span><span class="n">amplitudes</span> <span class="o">*</span> <span class="n">jnp</span><span class="o">.</span><span class="n">cos</span><span class="p">(</span><span class="n">omega</span> <span class="o">*</span> <span class="n">time</span><span class="p">)</span> <span class="o">*</span> <span class="n">jnp</span><span class="o">.</span><span class="n">exp</span><span class="p">(</span> <span class="o">-</span><span class="p">(</span><span class="n">time</span><span class="o">-</span><span class="n">t0</span><span class="p">)</span><span class="o">**</span><span class="mi">2</span> <span class="o">/</span> <span class="n">sigma</span><span class="o">**</span><span class="mi">2</span> <span class="p">)</span> <span class="p">)</span>
 </span><span id="__span-6-7"><a id="__codelineno-6-7" name="__codelineno-6-7" href="#__codelineno-6-7"></a>    <span class="n">diagonal_part</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">positions</span> <span class="o">@</span> <span class="n">field</span>
 </span><span id="__span-6-8"><a id="__codelineno-6-8" name="__codelineno-6-8" href="#__codelineno-6-8"></a>    <span class="k">return</span> <span class="n">jnp</span><span class="o">.</span><span class="n">diag</span><span class="p">(</span> <span class="n">diagonal_part</span> <span class="p">)</span>
-</span><span id="__span-6-9"><a id="__codelineno-6-9" name="__codelineno-6-9" href="#__codelineno-6-9"></a>
-</span><span id="__span-6-10"><a id="__codelineno-6-10" name="__codelineno-6-10" href="#__codelineno-6-10"></a><span class="c1"># Now, we replace the built-in with our potential</span>
 </span></code></pre></div>
+<p>Now, we replace the default potential with our custom term, just as we did before in the case of the pulsed dipole.</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-7-1"><a id="__codelineno-7-1" name="__codelineno-7-1" href="#__codelineno-7-1"></a><span class="n">hamiltonian_model</span><span class="p">[</span><span class="s2">&quot;potential&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">pulsed_potential</span>
 </span></code></pre></div>
 <p>To run a time-domain simulation, we just pass the modified hamiltonian dictionary directly, as demonstrated in the first section</p>
@@ -223,7 +223,7 @@ looks like <code>term: time, density_matrix, args -&gt; matrix</code>.</p>
 
 100.0 %
 </code></pre></div>
-<p><img alt="png" src="../l_master_files/l_master_35_2.png" /></p>
+<p><img alt="png" src="../l_master_files/l_master_37_2.png" /></p>
 <p>That's it.</p>
 <h2 id="custom-argument-objects">Custom Argument Objects</h2>
 <p>TBD</p>
@@ -238,10 +238,10 @@ looks like <code>term: time, density_matrix, args -&gt; matrix</code>.</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-9-1"><a id="__codelineno-9-1" name="__codelineno-9-1" href="#__codelineno-9-1"></a><span class="n">dissipator_model</span> <span class="o">=</span> <span class="n">flake</span><span class="o">.</span><span class="n">get_dissipator</span><span class="p">(</span> <span class="n">relaxation_rate</span> <span class="o">=</span> <span class="mi">1</span><span class="o">/</span><span class="mi">10</span> <span class="p">)</span>
 </span><span id="__span-9-2"><a id="__codelineno-9-2" name="__codelineno-9-2" href="#__codelineno-9-2"></a><span class="nb">print</span><span class="p">(</span> <span class="n">dissipator_model</span> <span class="p">)</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>{&#39;decoherence_time&#39;: &lt;function DecoherenceTime.&lt;locals&gt;.&lt;lambda&gt; at 0x7fac5d0f16c0&gt;}
+<div class="language-text highlight"><pre><span></span><code>{&#39;decoherence_time&#39;: &lt;function DecoherenceTime.&lt;locals&gt;.&lt;lambda&gt; at 0x7f5db8fa1120&gt;}
 </code></pre></div>
 <h2 id="postprocesses">Postprocesses</h2>
-<p>You can define custom postprocesses. These are functions with the signature <code>postprocess : density_matrix_batch, args -&gt; array</code>. The <code>density_marix_batch</code> is an array of shape <code>TxNxN</code>, where <code>T</code> encodes time.</p>
+<p>You can define custom postprocesses. These are functions with the signature <code>postprocess : density_matrix_batch, args -&gt; array</code>. The <code>density_matrix_batch</code> is an array of shape <code>TxNxN</code>, where <code>T</code> encodes time.</p>
 <p>For example, if you are only interested in the occupation of the 0-th state</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-10-1"><a id="__codelineno-10-1" name="__codelineno-10-1" href="#__codelineno-10-1"></a><span class="k">def</span> <span class="nf">extract_element</span><span class="p">(</span><span class="n">density_matrices</span><span class="p">,</span> <span class="n">args</span><span class="p">):</span>
 </span><span id="__span-10-2"><a id="__codelineno-10-2" name="__codelineno-10-2" href="#__codelineno-10-2"></a>    <span class="k">return</span> <span class="n">density_matrices</span><span class="p">[:,</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">]</span>
