deploy: e4294d9998ffac76ac283ab9ddc15a6d994b77de

--- a/tutorials/l_master/index.html
+++ b/tutorials/l_master/index.html
@@ -238,7 +238,7 @@ looks like <code>term: time, density_matrix, args -&gt; matrix</code>.</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-9-1"><a id="__codelineno-9-1" name="__codelineno-9-1" href="#__codelineno-9-1"></a><span class="n">dissipator_model</span> <span class="o">=</span> <span class="n">flake</span><span class="o">.</span><span class="n">get_dissipator</span><span class="p">(</span> <span class="n">relaxation_rate</span> <span class="o">=</span> <span class="mi">1</span><span class="o">/</span><span class="mi">10</span> <span class="p">)</span>
 </span><span id="__span-9-2"><a id="__codelineno-9-2" name="__codelineno-9-2" href="#__codelineno-9-2"></a><span class="nb">print</span><span class="p">(</span> <span class="n">dissipator_model</span> <span class="p">)</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>{&#39;decoherence_time&#39;: &lt;function DecoherenceTime.&lt;locals&gt;.&lt;lambda&gt; at 0x7f5db8fa1120&gt;}
+<div class="language-text highlight"><pre><span></span><code>{&#39;decoherence_time&#39;: &lt;function DecoherenceTime.&lt;locals&gt;.&lt;lambda&gt; at 0x7f19f0bb2660&gt;}
 </code></pre></div>
 <h2 id="postprocesses">Postprocesses</h2>
 <p>You can define custom postprocesses. These are functions with the signature <code>postprocess : density_matrix_batch, args -&gt; array</code>. The <code>density_matrix_batch</code> is an array of shape <code>TxNxN</code>, where <code>T</code> encodes time.</p>
