--- a/tutorials/la_lindblad/index.html
+++ b/tutorials/la_lindblad/index.html
@@ -124,7 +124,7 @@
                 <h1 id="lindblad-dissipation">Lindblad Dissipation</h1>
 <p>To model dissipation in greater depth, GRANAD makes a Lindblad dissipation model available. The mathematical details are laid out in <a href="https://link.aps.org/doi/10.1103/PhysRevA.109.022237">Pelc et al., 2024</a> and revolve around the following equation</p>
 <div class="arithmatex">\[\gamma_{ij}(t) = \gamma_{ij} \cdot f(t)\]</div>
-<p>where \gamma_{ij} is the transition rate from state i to state j and <span class="arithmatex">\(f\)</span> is a relaxation functional to prevent breaking the Pauli principle (pushing more than 2 electrons into the same energetic state).</p>
+<p>where <span class="arithmatex">\(\gamma_{ij}\)</span> is the transition rate from state i to state j and <span class="arithmatex">\(f\)</span> is a relaxation functional to prevent breaking the Pauli principle (pushing more than 2 electrons into the same energetic state).</p>
 <h2 id="lindblad-relaxation-dynamics-of-the-metallic-chain">Lindblad Relaxation dynamics of the Metallic Chain</h2>
 <p>In the following, we will consider a metallic chain with a uniform transition rate.</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a><span class="kn">from</span> <span class="nn">granad</span> <span class="kn">import</span> <span class="n">MaterialCatalog</span><span class="p">,</span> <span class="n">Hexagon</span><span class="p">,</span> <span class="n">Pulse</span>
@@ -134,7 +134,7 @@
 </span><span id="__span-0-5"><a id="__codelineno-0-5" name="__codelineno-0-5" href="#__codelineno-0-5"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_energies</span><span class="p">()</span>
 </span></code></pre></div>
 <p><img alt="png" src="../la_lindblad_files/la_lindblad_6_0.png" /></p>
-<p>We can now build the matrix of transitions rates with a uniform rate of <span class="arithmatex">\(gamma = 10\)</span> as follows</p>
+<p>We can now build the matrix of transitions rates with a uniform rate of <span class="arithmatex">\(\gamma = 10\)</span> as follows</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-1-1"><a id="__codelineno-1-1" name="__codelineno-1-1" href="#__codelineno-1-1"></a><span class="n">delta</span> <span class="o">=</span> <span class="n">flake</span><span class="o">.</span><span class="n">energies</span><span class="p">[:,</span><span class="kc">None</span><span class="p">]</span> <span class="o">-</span> <span class="n">flake</span><span class="o">.</span><span class="n">energies</span>
 </span><span id="__span-1-2"><a id="__codelineno-1-2" name="__codelineno-1-2" href="#__codelineno-1-2"></a><span class="n">gamma</span> <span class="o">=</span> <span class="mf">10.</span>
 </span><span id="__span-1-3"><a id="__codelineno-1-3" name="__codelineno-1-3" href="#__codelineno-1-3"></a><span class="n">gamma_matrix</span> <span class="o">=</span> <span class="n">gamma</span> <span class="o">*</span> <span class="p">(</span><span class="n">delta</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">)</span>
